测试下一步

--- a/Agriculture/hjyy.html
+++ b/Agriculture/hjyy.html
@@ -8,6 +8,8 @@
 		<link href="css/custom427.css" rel="stylesheet">
 		<script src="js/jquery-1.11.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>	
+		<script src="js/bootstrap-suggest.js"></script>
+		<script src="assets/js/hjyy.js"></script>
 		
 	</head>
 	<body>
