--- a/Agriculture/assets/hjyySeg-1.html
+++ b/Agriculture/assets/hjyySeg-1.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="contentFM">
 					<div class="countySpan"><span id="countySpan">河北省廊坊市香河县</span></div>
-					<form class="form-horizontal"  role="form">
+					<form id="hjryxx" class="form-horizontal"  role="form">
 						<div class="formLeftPane">
 							
 							<div class="form-group">
