--- a/Agriculture/hjyy.html
+++ b/Agriculture/hjyy.html
@@ -9,7 +9,10 @@
 		<script src="js/jquery-1.11.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>	
 		<script src="js/bootstrap-suggest.js"></script>
+		
 		<script src="assets/js/hjyy.js"></script>
+		<scirpt src="js/common.js"></scirpt>
+		
 		
 	</head>
 	<body>
