--- a/AgricultureR/assets/hjyySeg-1.html
+++ b/AgricultureR/assets/hjyySeg-1.html
@@ -1,4 +1,4 @@
-<div class="seg-invisible" style="width: 100%;height: 100%;">
+<div class="seg-visible" style="width: 100%;height: 100%;">
 	<div class="tipTab">
 		<div>汇交预约</div>
 	</div>
