--- a/AgricultureR/hjyy.html
+++ b/AgricultureR/hjyy.html
@@ -105,7 +105,8 @@
 		</div>
 		<div class="operBottomPane">
 			<button id="btnLeft" class="btn btn-success btn-success-outline" style="padding-left: 15px;">重  置</button>
-			<button id="btnRight" class="btn btn-success btn-success-outline" style="padding-left: 15px;">下一步</button>
+			<button id="btnSubmit" class="btn btn-success btn-success-outline" style="padding-left: 15px;">提  交</button>
+			<button id="btnRight" class="btn btn-primary btn-success btn-success-outline" style="padding-left: 15px;">下一步</button>
 		</div>
 		<div class="footer">
 			<span>copyrights@农业规划设计研究院</span>
