增加单位和用户保存到数据的功能

--- a/AgricultureR/assets/hjyySeg-2.html
+++ b/AgricultureR/assets/hjyySeg-2.html
@@ -4,7 +4,13 @@
 	</div>
 	<div class="contentPane">
 		<div class="contentFM">
-			<div class="countySpan"><span id="countySpan">河北省廊坊市香河县</span></div>
+			<div class="countySpan"><span id="countySpan">河北省廊坊市香河县</span>
+				<div style="position:absolute;right: 10%;margin: auto;">
+					<button id="updateBtnHJYY" class="btn btn-success btn-success-outline" style="margin-left: 15px;">修   改</button>
+					<button id="saveBtnHJYY" class="btn btn-success btn-success-outline" style="margin-left: 15px;">保   存</button>
+				</div>
+				
+			</div>
 			<form class="form-horizontal"  role="form">
 				<div class="formLeftPane">
 					
