--- a/AgricultureR/assets/hjyySeg-5.html
+++ b/AgricultureR/assets/hjyySeg-5.html
@@ -4,7 +4,9 @@
 		</div>
 		<div class="contentPane">
 			<div class="contentFM">
-				<div class="countySpan"><span id="countySpan">河北省廊坊市香河县</span></div>
+				<div class="countySpan"><span id="countySpan">河北省廊坊市香河县</span>
+										
+				</div>
 				<form class="form-horizontal"  role="form">
 					<div class="formLeftPane">
 						
