--- a/AgricultureR/hjyy.html
+++ b/AgricultureR/hjyy.html
@@ -5,11 +5,12 @@
 		<title>农地确权数据成果汇交管理系统</title>
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/select2.min.css" rel="stylesheet">
 		<link href="css/custom427.css" rel="stylesheet">
 		<script src="js/jquery-1.11.2.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>	
 		<script src="js/bootstrap-suggest.js"></script>
-		
+		<script src="js/select2.min.js"></script>
 		<script src="assets/js/hjyy.js"></script>
 		<scirpt src="js/common.js"></scirpt>
 		
