--- a/AgricultureR/assets/hjyySeg-1.html
+++ b/AgricultureR/assets/hjyySeg-1.html
@@ -64,7 +64,7 @@
 		</div>
 		<div class="contentFM">
 			<div class="countySpan">
-				<span id="countySpan">河北省廊坊市香河县</span>
+				<span id="countySpan">***省***市***县</span>
 				<div style="position:absolute;right: 10%;margin: auto;">
 					<button id="updateBtnHJYY" class="btn btn-success btn-success-outline" style="margin-left: 15px;">修   改</button>
 					<button id="saveBtnHJYY" class="btn btn-success btn-success-outline" style="margin-left: 15px;">保   存</button>
@@ -191,4 +191,22 @@
 			
 		</div>
 	</div>
+	<!-- Modal -->
+		<div class="modal fade" id="dialogModal" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		        <h4 id="modalTitle" class="modal-title">Modal title</h4>
+		      </div>
+		      <div id="modalContent" class="modal-body">
+		        ...
+		      </div>
+		      <div id="modalFooter" class="modal-footer">
+		        <button  type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		        <button type="button" class="btn btn-primary">Save changes</button>
+		      </div>
+		    </div><!-- /.modal-content -->
+		  </div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
 </div>
