添加了数据包提交信息，还没有做数据包修改update的功能

--- a/AgricultureR/hjyy.html
+++ b/AgricultureR/hjyy.html
@@ -13,6 +13,7 @@
 		<script src="js/select2.min.js"></script>
 		<script src="assets/js/hjyy.js"></script>
 		<scirpt src="js/common.js"></scirpt>
+		<script src="assets/js/seg-2.js"></script>
 		
 		
 	</head>
@@ -112,5 +113,6 @@
 		<div class="footer">
 			<span>copyrights@农业规划设计研究院</span>
 		</div>
+				
 	</body>
 </html>
