--- a/AgricultureR/assets/hjyySeg-2.html
+++ b/AgricultureR/assets/hjyySeg-2.html
@@ -100,7 +100,7 @@
 					</div>
 					<div class="form-group">
 						    <label for="sjbms" class="control-label">数据包备注</label>
-						    <textarea class="form-control" rows="3" id="sjbms"></textarea>
+						    <textarea class="form-control"  id="sjbms"></textarea>
 						    						    
 					</div>
 				</div>
