集成系统管理，增加功能调试完成

--- a/AgricultureR/hjyy.html
+++ b/AgricultureR/hjyy.html
@@ -14,8 +14,8 @@
 		<script src="js/bootstrap-table.js"></script>
 		<script src="js/bootstrap-suggest.js"></script>
 		<script src="js/select2.min.js"></script>
-		<script src="assets/js/hjyy.js"></script>
 		<scirpt src="js/common.js"></scirpt>
+		<script src="assets/js/hjyy.js"></script>
 		<script src="js/mindmup-editabletable.js"></script>
 		<scirpt src="numeric-input-example.js"></scirpt>
 		
@@ -29,7 +29,7 @@
 			</div>
 			<div class="navPane">
 				<ul class="navMenu">
-					<li class="active"><a href="#">汇交预约</a></li>
+					<li><a class="navActive" href="#">汇交预约</a></li>
 					<li><a href="#">汇交处理</a></li>
 					<li><a href="#">成果管理</a></li>
 					<li><a href="#">数据分析</a></li>
@@ -51,7 +51,7 @@
 				</ul>
 			</div>
 		</nav>
-		
+		<div id="paneLevel1" class="paneLevel1">
 		<div class="statusBar">
 			<div class="statusLine">				
 			</div>
@@ -113,6 +113,7 @@
 			<button id="btnLeft" class="btn btn-success btn-success-outline" style="padding-left: 15px;">重   置</button>
 			
 			<button id="btnRight" class="btn btn-primary btn-success btn-success-outline" style="padding-left: 15px;">下一步</button>
+		</div>
 		</div>
 		<div class="footer">
 			<span>copyrights@农业规划设计研究院</span>
