更新了hjgl-2,实现modal窗口可拖动，居中展示

--- a/AgricultureR/hjgl.html
+++ b/AgricultureR/hjgl.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>农地确权数据成果汇交管理系统V1.3</title>
+		<link href="css/jquery-ui.min.css" rel="stylesheet">
 		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/bootstrap-table.css" rel="stylesheet">
@@ -12,6 +13,7 @@
 		<link href="css/custom427.css" rel="stylesheet">
 		<script src="js/jquery-1.11.2.min.js"></script>
 		<script src="js/jquery.validate.min.js"></script>
+		<script src="js/jquery-ui.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>	
 		<script src="js/bootstrap-table.js"></script>
 		<script src="js/bootstrap-suggest.js"></script>
