完善了样式，调整代码。

--- a/AgricultureR/hjgl.html
+++ b/AgricultureR/hjgl.html
@@ -7,7 +7,7 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/bootstrap-table.css" rel="stylesheet">
 		<link href="css/select2.min.css" rel="stylesheet">
-		<link href="css/AddUserForm-style.css" rel="stylesheet">
+		<!--link href="css/AddUserForm-style.css" rel="stylesheet"-->
 		<link href="css/XTGL-YHGL.css" rel="stylesheet">
 		<link href="css/custom427.css" rel="stylesheet">
 		<script src="js/jquery-1.11.2.min.js"></script>
