--- a/AgricultureR/assets/hjglSeg-5.html
+++ b/AgricultureR/assets/hjglSeg-5.html
@@ -1,25 +1,42 @@
 <div style="width: 100%;height: 100%;">
 	 <div class="left-tag-div" id="left-tag-div">
-	 	<input type="button" id="YHGL-button" class="btn btn-info" value="用户管理" />
+	 	<input type="button" id="YHGL-button" class="btn btn-info" value="用户管理"  />
 	 	<input type="button" id="XTRZ-button"  class="btn btn-info" value="系统日志" />
 	 </div>
-	 <div class="right-container-div">
-		 <div class="right-header-div">
+	 <div class="right-container-div" id="rightContain">
+		 <div class="right-header-div" id="right-yhgl-div" style="display: block;">
 		 	<h2>用户管理</h2>
 		 	<ul>
 		    	<li><a class="cursor" data-toggle="modal" data-target="changeModal" id="updateUser" ><img src="img/xiugai.png" /></a></li>
 		 		<li><a class="cursor" data-toggle="modal" data-target="modal-delete" id="delUser"><img src="img/shanchu.png" /></a></li>
 		 		<li class="zengjia-li"><a class="cursor" data-toggle="modal" id="addUser"><img src="img/zengjia.png" /></a></li>
-		 	</ul>
-		 	
+		 	</ul>	
+		 	<div id="UserTable-div" "></div>	 
 		 </div>
-		 <div id="UserTable-div"></div>
+		 
+		 <div class="right-header-div" id="right-xtrz-div" style="display: none;">
+		 <h2>系统日志</h2>	
+		 <div id="xtrzTable-div" class="xtrzTbablecal">
+		 	<table id="xtrzTable" class='table table-striped'>
+	 		<thead>
+	 			<tr>
+	 				<th>操作时间</th>
+	 				<th>操作行为</th>
+	 				<th>操作的系统用户</th>
+	 				<th>行为描述</th>
+	 			</tr>
+	 		</thead>
+	 		<tbody id="xtrzTbody">
+	 		</tbody>
+		 	</table>
+		 </div>
+		 </div>		 
 	</div>
 	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span><button>
+	      <div class="modal-header" id="addYH">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	        <h2 id="exampleModalLabel">添加用户</h2>
 	      </div>
 	      <div class="modal-body">
@@ -85,11 +102,11 @@
 	<div class="modal fade" role="dialog" aria-labelledby="gridSystemModalLabel" id="modal-delete">
 	  <div class="modal-dialog" role="document">
 	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span><button>
+	      <div class="modal-header" id="deleYH">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	        <h2 class="modal-title" id="gridSystemModalLabel">删除信息</h2>
 	      </div>
-	      <div class="modal-body">
+	      <div class="modal-body" id="bodymodal">
 	        <div class="container-fluid">
 	          <div class="row">           
 	            <div class="col-md-4 col-md-offset-4" id="InfoLabel">确定删除该条记录吗？</div>
