--- a/AgricultureR/hjgl.html
+++ b/AgricultureR/hjgl.html
@@ -21,6 +21,7 @@
 		<script src="assets/js/hjgl.js"></script>
 		<script src="js/mindmup-editabletable.js"></script>
 		<scirpt src="numeric-input-example.js"></scirpt>
+		<script language="javascript" type="text/javascript" src="My97DatePicker/WdatePicker.js"></script>
 				
 	</head>
 	<body>
