--- a/AgricultureR/assets/hjyySeg-4.html
+++ b/AgricultureR/assets/hjyySeg-4.html
@@ -11,8 +11,8 @@
 				<div class="bs-example left-ps">
 					<dl class="dl-horizontal">
 			            <dt>提交用户</dt>
-			            <dd>宋江</dt>
-			            <dd>联系电话</dd>
+			            <dd>宋江</dd>
+			            <dt>联系电话</dt>
 			            <dd>13973219977</dd>
 			            <dt>联系邮箱</dt>
 			            <dd>n8887@163.com</dd>
